--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .roboto-thin {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
-    font-style: normal;
+    font-size: 13px;
 }
 
 .roboto-light {
@@ -84,6 +84,42 @@ header{
     height: 12vh;
     margin-top: 2vh;
 }
+
+.lead{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 2rem;
+}
+
+.keyFeature{
+    border: 1px solid rgba(0, 169, 244, 0.82);
+    border-radius: 5px;
+}
+
+
+ul{
+    margin-right: -10px;
+}
+.li{
+    list-style: none;
+    margin-left: -35px;
+    font-size: 14px;
+    font-family: Roboto, serif;
+}
+
+.li:before{
+    content:'✓';
+    color: forestgreen;
+    font-size: 22px;
+    font-weight: 900;
+    padding-right: 9px;
+}
+.img1{
+    background-color: rgb(0, 169, 244);
+    border-bottom-left-radius: 50%;
+    border-top-left-radius: 50%;
+}
+
 footer{
     padding:0 7vw;
 }
