--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,7 +8,7 @@
 .roboto-thin {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
-    font-size: 13px;
+    font-size: 12px;
 }
 
 .roboto-light {
@@ -43,7 +43,7 @@
 
 .roboto-thin-italic {
     font-family: "Roboto", sans-serif;
-    font-weight:100;
+    font-weight: 100;
     font-size: 16px;
     font-style: italic;
 }
@@ -78,51 +78,85 @@
     font-style: italic;
 }
 
-header{
-   background-color: white;
+header {
+    background-color: white;
     box-shadow: 0 1px 2px rgba(159, 152, 152, 0.33);
     height: 12vh;
     margin-top: 2vh;
 }
-.lead{
+
+.lead {
     font-weight: 400;
     font-size: 18px;
     line-height: 2rem;
 }
-.keyFeature{
-   box-shadow: 0px 1px 0px rgba(159, 152, 152, 0.33);
+
+.keyFeature {
+    box-shadow: 0px 1px 0px rgba(159, 152, 152, 0.33);
 }
-.text{
+
+.text {
     font-weight: bold;
 }
-ul{
+
+ul {
     margin-right: -10px;
 }
-.li{
+
+.li {
     list-style: none;
     margin-left: -35px;
     font-size: 14px;
     font-family: Roboto, serif;
 }
-.li:before{
-    content:'✓';
+
+.li:before {
+    content: '✓';
     color: forestgreen;
     font-size: 22px;
     font-weight: 900;
     padding-right: 9px;
 }
-.img1{
+
+.img1 {
     background-color: rgb(0, 169, 244);
     border-bottom-left-radius: 50%;
     border-top-left-radius: 50%;
 }
-.hangicon2{
+
+.hangicon2 {
     border-top: 4px solid rgb(0, 169, 244);
     box-shadow: 0px 1px 1px 1px rgba(159, 152, 152, 0.33);
-    margin: 20px;
+    margin: 0 20px;
     width: 330px;
 }
 
-footer{
-    padding:0 7vw;
+.projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+    margin-top: 30px;
+    font-size: 20px;
+}
+
+.skill {
+    border-top: 4px solid rgb(0, 169, 244);
+    box-shadow: 0 1px 1px 1px rgba(159, 152, 152, 0.33);
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+}
+
+.skills {
+    border-left: 4px solid rgb(0, 169, 244);
+    box-shadow: 1px 0 1px 1px rgba(159, 152, 152, 0.33);
+    height: 50px;
+    width: 180px;
+    text-align: center;
+    padding-top: 15px;
+}
+
+footer {
+    padding: 0 7vw;
+    background-color: rgba(0, 0, 0, 0.89);
+    color: white !important;
 }
