--- a/style.css
+++ b/style.css
@@ -83,6 +83,18 @@ ul {
     width: 180px;
     text-align: center;
     padding-top: 15px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.skills:hover {
+    background-color: rgb(0, 169, 244);
+}
+
+#navigator {
+    border-top: 5px solid rgb(0, 169, 244);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    margin-top: 1rem;
 }
 
 .overview {
