--- a/style.css
+++ b/style.css
@@ -69,9 +69,27 @@ ul {
     font-size: 20px;
 }
 
+.navigator {
+    height: 10vh;
+    width: auto;
+    background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+.navigator-box {
+    box-shadow: 0 1px 0 rgba(159, 152, 152, 0.33);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 10px;
+}
+
+
 .skill {
     border-top: 4px solid rgb(0, 169, 244);
-    box-shadow: 1px 0 1px rgba(159, 152, 152, 0.33);
+    border-left: 1px solid rgb(0, 169, 244);
+    box-shadow: 1px 1px 1px 1px rgba(159, 152, 152, 0.33);
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
 }
@@ -90,21 +108,6 @@ ul {
     background-color: rgb(0, 169, 244);
 }
 
-.navigator {
-    height: 10vh;
-    width: auto;
-    background-color: white;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-}
-
-.navigator-box {
-    box-shadow: 0 1px 0 rgba(159, 152, 152, 0.33);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding: 10px;
-}
 
 .overview {
     display: flex;
