--- a/style.css
+++ b/style.css
@@ -72,19 +72,31 @@ ul {
 .navigator {
     height: 10vh;
     width: auto;
+    border: none;
     background-color: white;
     position: sticky;
     top: 0;
     z-index: 1;
+
 }
 
 .navigator-box {
+    border-bottom: 1px solid rgb(0, 169, 244);
+    border-right: 1px solid rgb(0, 169, 244);
+    border-left: 1px solid rgb(0, 169, 244);
     box-shadow: 0 1px 0 rgba(159, 152, 152, 0.33);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    padding: 10px;
+    padding: 10px 10px 10px 0;
 }
 
+.key-skill {
+    border-top: 4px solid rgb(0, 169, 244);
+    border-right: 1px solid rgb(0, 169, 244);
+    border-left: 1px solid rgb(0, 169, 244);
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+}
 
 .skill {
     border-top: 4px solid rgb(0, 169, 244);
@@ -114,7 +126,6 @@ ul {
     height: auto;
     justify-content: space-between;
     gap: 5vw;
-
 }
 
 .overview-Right h1 {
